	Change "was" to "is".
	* src/plugins/FtmStyleAncestors.py (print_more_about): 
	Translate event names. Add description.
	* src/plugins/FtmStyleDescendants.py (print_more_about, 
	print_more_about_families): Translate event names. Add description.
	* src/po/de.po: Change Priesterweihe to Ordination.
	* src/plugins/FamilyGroup.py: Translation corrections.

2004-02-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ImageSelect.py: Corrections.
	* src/RelLib.py: Corrections. 
	* src/Sources.py: Corrections.
	* src/gramps_main.py: Corrections.
	* src/Bookmarks.py: Corrections.

	* src/plugins/DetDescendantReport.py (write_person): Write
	images before the paragraph start; (insert_images): Don't start
	and end pargraphs.  
	* src/plugins/DetAncestralReport.py: (write_person): Write
	images before the paragraph start; (insert_images): Don't start
	and end pargraphs. 

2004-02-20  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Corrections.
	* src/EditSource.py: Use parent class. Use windows menu.
	* src/ImageSelect.py: Corrections.
	* src/Sources.py: Corrections.
	* src/gramps.glade: Add handlers.
	* src/NoteEdit.py: Corrections. 
	* src/dialog.glade: Add handler. 
	* src/Witness.py: Corrections. 
	* src/RelLib.py: Include witnesses in comparing events. 
	* src/FamilyView.py: Pass parent on to child classes.
	* src/AddSpouse.py: Pass parent on to EditPerson.
	* src/ChooseParents.py: Pass parent on to EditPerson.
	* src/gramps_main.py: Pass Gramps class to child classes.
	* src/MergeData.py: Pass parent on to EditPerson.

2004-02-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Use parent class. Add/remove itself from/to
	the Windows menu.
	* src/NameEdit.py: Make non-modal. 
	* src/gramps.glade: Add Windows menu.
	* src/gramps_main.py: Get Windows menu and its submenu.
	Pass Gramps class to the children -- first-class object editors.
	* src/dialog.glade: Add handler. 
	* src/srcsel.glade: Add handlers.