@@ -355,8 +355,8 @@ class EditPerson:
             "on_add_aka_clicked"        : self.on_add_aka_clicked,
             "on_add_attr_clicked"       : self.on_add_attr_clicked,
             "on_add_url_clicked"        : self.on_add_url_clicked,
-            "on_addphoto_clicked"       : self.gallery.on_add_photo_clicked,
-            "on_selectphoto_clicked"    : self.gallery.on_select_photo_clicked,
+            "on_addphoto_clicked"       : self.gallery.on_add_media_clicked,
+            "on_selectphoto_clicked"    : self.gallery.on_select_media_clicked,
             "on_aka_delete_clicked"     : self.on_aka_delete_clicked,
             "on_aka_update_clicked"     : self.on_aka_update_clicked,
             "on_apply_person_clicked"   : self.on_apply_person_clicked,
@@ -366,9 +366,9 @@ class EditPerson:
             "on_delete_attr_clicked"    : self.on_delete_attr_clicked,
             "on_delete_event"           : self.on_delete_event,
             "on_delete_url_clicked"     : self.on_delete_url_clicked,
-            "on_deletephoto_clicked"    : self.gallery.on_delete_photo_clicked,
+            "on_deletephoto_clicked"    : self.gallery.on_delete_media_clicked,
             "on_edit_properties_clicked": self.gallery.popup_change_description,
-            "on_editphoto_clicked"      : self.gallery.on_edit_photo_clicked,
+            "on_editphoto_clicked"      : self.gallery.on_edit_media_clicked,
             "on_editperson_switch_page" : self.on_switch_page,
             "on_event_add_clicked"      : self.on_event_add_clicked,
             "on_event_delete_clicked"   : self.on_event_delete_clicked,
