@@ -168,10 +168,10 @@ class EditPlace:
 
         self.top_window.signal_autoconnect({
             "on_switch_page"            : self.on_switch_page,
-            "on_addphoto_clicked"       : self.glry.on_add_media_object_clicked,
-            "on_selectphoto_clicked"    : self.glry.on_select_photo_clicked,
-            "on_deletephoto_clicked"    : self.glry.on_delete_photo_clicked,
-            "on_edit_photo_clicked"     : self.glry.on_edit_photo_clicked,
+            "on_addphoto_clicked"       : self.glry.on_add_media_clicked,
+            "on_selectphoto_clicked"    : self.glry.on_select_media_clicked,
+            "on_deletephoto_clicked"    : self.glry.on_delete_media_clicked,
+            "on_edit_photo_clicked"     : self.glry.on_edit_media_clicked,
             "on_edit_properties_clicked": self.glry.popup_change_description,
             "on_add_url_clicked"        : self.on_add_url_clicked,
             "on_delete_url_clicked"     : self.on_delete_url_clicked,
