@@ -101,10 +101,10 @@ class EditSource:
 
         self.top_window.signal_autoconnect({
             "on_switch_page" : self.on_switch_page,
-            "on_addphoto_clicked" : self.gallery.on_add_media_object_clicked,
-            "on_selectphoto_clicked"    : self.gallery.on_select_photo_clicked,
-            "on_deletephoto_clicked" : self.gallery.on_delete_photo_clicked,
-            "on_editphoto_clicked"     : self.gallery.on_edit_photo_clicked,
+            "on_addphoto_clicked" : self.gallery.on_add_media_clicked,
+            "on_selectphoto_clicked"    : self.gallery.on_select_media_clicked,
+            "on_deletephoto_clicked" : self.gallery.on_delete_media_clicked,
+            "on_editphoto_clicked"     : self.gallery.on_edit_media_clicked,
             "on_edit_properties_clicked": self.gallery.popup_change_description,
             "on_sourceEditor_help_clicked" : self.on_help_clicked,
             "on_sourceEditor_ok_clicked" : self.on_source_apply_clicked,
