@@ -106,14 +106,14 @@ class Marriage:
             "on_attr_down_clicked" : self.on_attr_down_clicked,
             "on_add_attr_clicked" : self.on_add_attr_clicked,
             "on_delete_attr_clicked" : self.on_delete_attr_clicked,
-            "on_addphoto_clicked" : self.gallery.on_add_media_object_clicked,
-            "on_selectphoto_clicked" : self.gallery.on_select_photo_clicked,
+            "on_addphoto_clicked" : self.gallery.on_add_media_clicked,
+            "on_selectphoto_clicked" : self.gallery.on_select_media_clicked,
             "on_close_marriage_editor" : self.on_close_marriage_editor,
             "on_delete_event" : self.on_delete_event,
             "on_lds_src_clicked" : self.lds_src_clicked,
             "on_lds_note_clicked" : self.lds_note_clicked,
-            "on_deletephoto_clicked" : self.gallery.on_delete_photo_clicked,
-            "on_edit_photo_clicked" : self.gallery.on_edit_photo_clicked,
+            "on_deletephoto_clicked" : self.gallery.on_delete_media_clicked,
+            "on_edit_photo_clicked" : self.gallery.on_edit_media_clicked,
             "on_edit_properties_clicked": self.gallery.popup_change_description,
             "on_marriageAddBtn_clicked" : self.on_add_clicked,
             "on_event_update_clicked" : self.on_event_update_clicked,
